CASMUAS-182 refactored UAI creation; namespace / opt_ports in class
Added opt_ports to the UAIClass object and fixed implementation of
namespace in UAIClass and UAI creation.  Refactored UAI creation to
make it re-usable when we get to administrative UAI creation and
to make it more unit testable.

Added some unit tests.
